fixed flag size on mobile

--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -156,7 +156,7 @@
     }
 
     .details__box__image {
-        min-height: 50%;
+        /* min-height: 50%; */
     }
 
     div.details__box__image img {
